[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "la-framework"
version = "0.1.0"
description = "Daniel's internal Python framework"
requires-python = ">=3.10"
dependencies = [
    "pyodbc>=4.0",
    "requests>=2.28",
    "plotly>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]